--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -1,6 +1,7 @@
 - hosts: all
   roles:
-    - add-build-sshkey
+    - role: add-build-sshkey
+      when: ansible_connection == 'ssh'
     - prepare-workspace
     # This role ensures basic connectivity and produces some
     # helpful information in zuul-info/
