--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -2,7 +2,10 @@
   roles:
     - role: add-build-sshkey
       when: ansible_connection == 'ssh'
-    - prepare-workspace
+    - role: prepare-workspace
+      when: ansible_connection == 'ssh'
+    - role: prepare-workspace-openshift
+      when: ansible_connection == 'kubectl'
     # This role ensures basic connectivity and produces some
     # helpful information in zuul-info/
     - validate-host
