--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -1,5 +1,6 @@
 - hosts: all
   roles:
+    - start-zuul-console
     - role: add-build-sshkey
       when: ansible_connection == 'ssh'
     - role: prepare-workspace
