Report result to mysql

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -20,10 +20,12 @@
         check: 'in_progress'
         comment: false
     success:
+      mysql:
       github:
         check: 'success'
         comment: false
     failure:
+      mysql:
       github:
         check: 'failure'
         comment: false
@@ -71,11 +73,13 @@
         check: 'in_progress'
         comment: false
     success:
+      mysql:
       github:
         check: 'success'
         comment: false
         merge: true
     failure:
+      mysql:
       github:
         check: 'failure'
         comment: false
@@ -92,6 +96,10 @@
       github:
         - event: push
           ref: ^refs/heads/.*$
+    success:
+      mysql:
+    failure:
+      mysql:
 
 - pipeline:
     name: tag
@@ -103,3 +111,7 @@
       github:
         - event: push
           ref: ^refs/tags/.*$
+    success:
+      mysql:
+    failure:
+      mysql:
