use fetch-output-openshift for kubectl connections

--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -1,3 +1,6 @@
 - hosts: all
   roles:
-    - fetch-output
+    - role: fetch-output
+      when: ansible_connection == 'ssh'
+    - role: fetch-output-openshift
+      when: ansible_connection == 'kubectl'
