--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -4,3 +4,12 @@
       when: ansible_connection == 'ssh'
     - role: fetch-output-openshift
       when: ansible_connection == 'kubectl'
+
+- hosts: localhost
+  roles:
+    - role: upload-logs-s3
+      vars:
+        zuul_log_bucket: vassast-zuul-logs
+        upload_logs_s3_endpoint: fra1.digitaloceanspaces.com
+        zuul_log_aws_access_key: "{{ digitalocean_log_space.digitalocean_access_key }}"
+        zuul_log_aws_secret_key: "{{ digitalocean_log_space.digitalocean_secret_key }}"
