--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -10,6 +10,6 @@
     - role: upload-logs-s3
       vars:
         zuul_log_bucket: vassast-zuul-logs
-        upload_logs_s3_endpoint: fra1.digitaloceanspaces.com
+        upload_logs_s3_endpoint: https://fra1.digitaloceanspaces.com
         zuul_log_aws_access_key: "{{ digitalocean_log_space.digitalocean_access_key }}"
         zuul_log_aws_secret_key: "{{ digitalocean_log_space.digitalocean_secret_key }}"
