--- a/playbooks/base/post.yaml
+++ b/playbooks/base/post.yaml
@@ -7,7 +7,7 @@
 
 - hosts: localhost
   roles:
-    - role: upload-logs-s3
+    - role: avass-upload-logs-s3
       vars:
         zuul_log_bucket: vassast-zuul-logs
         upload_logs_s3_endpoint: https://fra1.digitaloceanspaces.com
