--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -13,7 +13,7 @@
     post-run: playbooks/base/post.yaml
     roles:
       - zuul: opendev.org/zuul/zuul-jobs
-      - zuul: albinvass/zuul-jobs
+      - zuul: github.com/albinvass/zuul-jobs
     timeout: 1800
     secrets:
     - name: digitalocean_log_space
@@ -28,7 +28,7 @@
     pre-run: playbooks/base-test/pre.yaml
     post-run: playbooks/base-test/post.yaml
       - zuul: opendev.org/zuul/zuul-jobs
-      - zuul: albinvass/zuul-jobs
+      - zuul: github.com/albinvass/zuul-jobs
     timeout: 1800
     secrets:
     - name: digitalocean_log_space
