Only trigger lgtm on /approve comment

--- a/zuul.d/lgtm.yaml
+++ b/zuul.d/lgtm.yaml
@@ -66,7 +66,9 @@
       github:
         - event: pull_request
           action: comment
+          comment: (?i)^\s*/approve\s*$
         - event: pull_request_review
+          comment: (?i)^\s*/approve\s*$
     start:
       github:
         check: 'in_progress'
