Remove write permission requirement for gate

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -40,8 +40,7 @@
     require:
       github:
         review:
-          - permission: write
-            type: approved
+          - type: approved
         label: gate
         open: True
         current-patchset: True
