--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -43,6 +43,9 @@
           # Require an approval from user with write access (e.g. core-reviewer)
           - type: approved
             permission: write
+          - type: approved
+            permission: read
+            username: vassast-zuul[bot]
         # Require label
         label: gate
         open: True
