Allow read permissions for gate if approved by vassast-zuul

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -45,7 +45,7 @@
             permission: write
           - type: approved
             permission: read
-            username: vassast-zuul[bot]
+            username: vassast-zuul\[bot\]
         # Require label
         label: gate
         open: True
