--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -45,7 +45,7 @@
             permission: write
           - type: approved
             permission: read
-            username: "vassast-zuul\[bot\]"
+            username: "vassast-zuul"
         # Require label
         label: gate
         open: True
