Allow read permissions for gate if approved by vassast-zuul

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -42,8 +42,7 @@
         review:
           # Require an approval from user with write access (e.g. core-reviewer)
           - type: approved
-            permission: read
-            username: "vassast-zuul"
+            permission: write
         # Require label
         label: gate
         open: True
