Reject read permissions except for vassast-zuul bot

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -40,13 +40,16 @@
     require:
       github:
         review:
-          # Require an approval from user with write access (e.g. core-reviewer)
           - type: approved
-            permission: write
-        # Require label
         label: gate
         open: True
         current-patchset: True
+    reject:
+      github:
+        review:
+          - type: approved
+            permission: read
+            username: "^(?!vassast-zuul\\[bot\\])"
     trigger:
       github:
         - event: pull_request_review
