--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -17,6 +17,8 @@
       #- zuul: opendev.org/zuul/zuul-jobs
       - zuul: zuul/zuul-jobs
       - zuul: github.com/albinvass/zuul-jobs
+    required-projects:
+      - opendev.org/zuuul/zuul-jobs
     timeout: 1800
     vars:
       zuul_cache_backend: s3
