Revert "Test project short name for role includes"
This reverts commit 7ba76419005a671f5851edf27d7e62e57d9b94a2.

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -14,8 +14,7 @@
       - playbooks/base/post-update-artifacts.yaml
       - playbooks/base/post.yaml
     roles:
-      #- zuul: opendev.org/zuul/zuul-jobs
-      - zuul: zuul/zuul-jobs
+      - zuul: opendev.org/zuul/zuul-jobs
       - zuul: github.com/albinvass/zuul-jobs
     required-projects:
       - zuul/zuul-jobs
