Revert "Use non canonical name for zuul/zuul-jobs"
This reverts commit 9b168725cf0476d0dc80819f6729fa03b6736e5a.

--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -17,7 +17,7 @@
       - zuul: opendev.org/zuul/zuul-jobs
       - zuul: github.com/albinvass/zuul-jobs
     required-projects:
-      - zuul/zuul-jobs
+      - opendev.org/zuul/zuul-jobs
     timeout: 1800
     vars:
       zuul_cache_backend: s3
