--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -13,6 +13,7 @@
     post-run:
       - playbooks/base/post-update-artifacts.yaml
       - playbooks/base/post.yaml
+    cleanup-run: playbooks/base/cleanup-logs.yaml
     roles:
       - zuul: opendev.org/zuul/zuul-jobs
       - zuul: github.com/albinvass/zuul-jobs
