Fix new pipeline requirements

--- a/zuul.d/pipelines.yaml
+++ b/zuul.d/pipelines.yaml
@@ -104,7 +104,8 @@
     manager: supercedent
     precedence: high
     require:
-      merged: true
+      github:
+        merged: true
     trigger:
       github:
         - event: closed
@@ -118,7 +119,8 @@
     manager: serial
     precedence: high
     require:
-      merged: true
+      github:
+        merged: true
     trigger:
       github:
         - event: closed
